[gd_scene load_steps=34 format=3 uid="uid://qx4luvkdvhsx"]

[ext_resource type="Texture2D" uid="uid://lo64vuuboib7" path="res://assests/Boss3Burrow.png" id="1_bkgmp"]
[ext_resource type="Script" path="res://enemies/third_boss.gd" id="1_wu1mo"]
[ext_resource type="Texture2D" uid="uid://bq1y6lifsashx" path="res://assests/Boss3.png" id="2_m0dt1"]
[ext_resource type="Texture2D" uid="uid://21st1lhrbi7l" path="res://assests/BurrowSprite.png" id="4_10ce0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sidcm"]
atlas = ExtResource("1_bkgmp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsgxw"]
atlas = ExtResource("1_bkgmp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilyp6"]
atlas = ExtResource("1_bkgmp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yms18"]
atlas = ExtResource("1_bkgmp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijne3"]
atlas = ExtResource("1_bkgmp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilthq"]
atlas = ExtResource("1_bkgmp")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7g0p"]
atlas = ExtResource("1_bkgmp")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u02ae"]
atlas = ExtResource("1_bkgmp")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3feyg"]
atlas = ExtResource("1_bkgmp")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v720c"]
atlas = ExtResource("1_bkgmp")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k71l"]
atlas = ExtResource("1_bkgmp")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlpsg"]
atlas = ExtResource("1_bkgmp")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8rao"]
atlas = ExtResource("1_bkgmp")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv4a4"]
atlas = ExtResource("1_bkgmp")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh4f2"]
atlas = ExtResource("1_bkgmp")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpi8m"]
atlas = ExtResource("1_bkgmp")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjp6q"]
atlas = ExtResource("1_bkgmp")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vhow"]
atlas = ExtResource("2_m0dt1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv2sn"]
atlas = ExtResource("2_m0dt1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kkdb"]
atlas = ExtResource("2_m0dt1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4kw4"]
atlas = ExtResource("2_m0dt1")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_np67l"]
atlas = ExtResource("2_m0dt1")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5davf"]
atlas = ExtResource("2_m0dt1")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb22p"]
atlas = ExtResource("2_m0dt1")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p5e83"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sidcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsgxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilyp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yms18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijne3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilthq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7g0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u02ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3feyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v720c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k71l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlpsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8rao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv4a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh4f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpi8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjp6q")
}],
"loop": true,
"name": &"burrow",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vhow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv2sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kkdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4kw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np67l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5davf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb22p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73fiy"]
size = Vector2(207.25, 77.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhgci"]
size = Vector2(213.75, 83.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1dwc"]
size = Vector2(218, 199)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_10wtt"]
size = Vector2(215, 63)

[node name="ThirdBoss" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
script = ExtResource("1_wu1mo")
maxHealth = 200

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-3.8147e-06, -0.999996)
scale = Vector2(6.67188, 6.67188)
sprite_frames = SubResource("SpriteFrames_p5e83")
animation = &"burrow"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.625, 51.625)
shape = SubResource("RectangleShape2D_73fiy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.875, 51.875)
shape = SubResource("RectangleShape2D_nhgci")

[node name="BossHealth" type="ProgressBar" parent="Area2D"]
offset_left = -74.0
offset_top = -136.0
offset_right = 78.0
offset_bottom = -109.0
value = 100.0
show_percentage = false

[node name="BurrowArea" type="Area2D" parent="."]
collision_layer = 2

[node name="BurrowCollision" type="CollisionShape2D" parent="BurrowArea"]
position = Vector2(2, -4.5)
shape = SubResource("RectangleShape2D_b1dwc")
disabled = true

[node name="BurrowSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(2, -0.999996)
scale = Vector2(3.42969, 3.42969)
texture = ExtResource("4_10ce0")

[node name="BurrowedArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="BurrowedCollision" type="CollisionShape2D" parent="BurrowedArea"]
position = Vector2(1.5, 153.5)
shape = SubResource("RectangleShape2D_10wtt")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="BurrowArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="BurrowedArea" to="." method="_on_burrowed_area_body_entered"]
